Initial Grunt configuration

--- a/package.json
+++ b/package.json
@@ -12,11 +12,17 @@
     "css": "*",
     "moment": "*",
     "underscore": "*",
-    "nodeunit": "*",
     "showdown": "*",
     "node-polyglot": "*",
     "sqlite3": "2.1.7",
     "jugglingdb": "0.2.x",
     "jugglingdb-sqlite3": "git+https://github.com/jugglingdb/sqlite3-adapter.git#master"
+  },
+  "devDependencies": {
+    "nodeunit": "*",
+    "grunt": "~0.4.1",
+    "grunt-contrib-nodeunit": "~0.1.2",
+    "grunt-jshint2": "~0.1.1",
+    "grunt-contrib-compass": "~0.2.0"
   }
 }
