Very very basic travis setup. Will be able to configure this to be much better & more useful once grunt is all setup.

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node app"
+    "start": "node app",
+    "test": "nodeunit core/test/ghost"
   },
   "dependencies": {
     "express": "3.1.0",
