Vain attempt to get node polyglot to install properly

--- a/package.json
+++ b/package.json
@@ -10,14 +10,16 @@
     "express": "3.1.0",
     "express-hbs": "*",
     "connect-flash": "*",
+    "node-polyglot": "0.2.1",
     "css": "*",
     "moment": "*",
     "underscore": "*",
-    "nodeunit": "*",
     "showdown": "*",
-    "node-polyglot": "*",
     "sqlite3": "2.1.7",
     "jugglingdb": "0.2.x",
     "jugglingdb-sqlite3": "git+https://github.com/jugglingdb/sqlite3-adapter.git#master"
+  },
+  "devDependencies": {
+      "nodeunit": "*"
   }
 }
