--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "express": "3.1.0",
-    "express-hbs": "*",
+    "express-hbs": "0.1.3-pre",
     "connect-flash": "*",
     "node-polyglot": "0.2.1",
     "css": "*",
