closes #33 - api example
Moving towards using an API which we can both expose publicly, and use internally.
Due to issues with JugglingDB, this breaks updating contentHTML on edit
Also, language, status, featured etc are all no long set / updated.

--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "moment": "*",
     "underscore": "*",
     "showdown": "*",
+    "when": "*",
     "sqlite3": "2.1.7",
-    "jugglingdb": "0.2.x",
+    "jugglingdb": "0.2.0-29",
     "jugglingdb-sqlite3": "git+https://github.com/jugglingdb/sqlite3-adapter.git#master"
   },
   "devDependencies": {
