--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "moment": "*",
     "underscore": "*",
     "showdown": "*",
-    "when": "*",
     "sqlite3": "2.1.7",
+    "bookshelf": "0.1.x",
+    "knex": "0.1.x",
+    "when": "~2.1.0",
     "jugglingdb": "0.2.0-29",
     "jugglingdb-sqlite3": "git+https://github.com/jugglingdb/sqlite3-adapter.git#master"
   },
