--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "tryghost",
-  "version": "0.0.1",
+  "name": "Ghost",
+  "version": "0.1",
   "private": true,
   "scripts": {
     "start": "node app",
