--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "grunt-contrib-nodeunit": "0.1.x",
     "grunt-contrib-compass": "0.2.x",
     "nodeunit": "0.8.x",
-    "grunt-jslint": "0.2.x"
+    "grunt-jslint": "0.2.x",
+    "should": "~1.2.2"
   }
 }
