Made Ghost work with bourbon, grunt init works again

--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
     "bcrypt": "~0.7.5"
   },
   "devDependencies": {
-    "grunt": "0.4.x",
+    "grunt": "~0.4.1",
     "grunt-contrib-nodeunit": "0.1.x",
-    "grunt-contrib-compass": "0.2.x",
     "nodeunit": "0.8.x",
-    "grunt-jslint": "0.2.x"
+    "grunt-jslint": "0.2.x",
+    "grunt-shell": "~0.2.2",
+    "grunt-contrib-sass": "~0.3.0"
   }
 }
