--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "grunt-contrib-compass": "0.2.x",
     "nodeunit": "0.8.x",
     "grunt-jslint": "0.2.x",
-    "should": "~1.2.2"
+    "should": "~1.2.2",
+    "grunt-mocha-test": "~0.4.0"
   }
 }
