--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node app",
-    "test": "mocha core/test/ghost"
+    "test": "grunt validate"
   },
   "dependencies": {
     "express": "3.1.x",
