Replaced bcrypt with bcrypt-nodejs

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "bookshelf": "0.1.x",
     "knex": "0.1.x",
     "when": "2.1.x",
-    "bcrypt": "~0.7.5"
+    "bcrypt-nodejs": "0.0.3"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
