--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "devDependencies": {
     "grunt": "~0.4.1",
-    "grunt-jslint": "0.2.x",
+    "grunt-jslint": ">=0.2.6",
     "should": "~1.2.2",
     "grunt-mocha-test": "~0.4.0",
     "grunt-shell": "~0.2.2",
