--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "sinon": "~1.7.2",
     "mocha": "~1.10.0",
     "grunt-contrib-handlebars": "~0.5.9",
-    "grunt-contrib-watch": "~0.4.4"
+    "grunt-contrib-watch": "~0.4.4",
+    "grunt-bump": "0.0.2",
+    "grunt-zip": "~0.9.0",
+    "grunt-contrib-copy": "~0.4.1"
   }
 }
