Restricting Admin user creation
Solves #138.
* Removed user and user_roles from fixture
* Restricted user creation to one user. That user is id 1, is admin
* Changed tests so they accommodate for this fact
* Can not create new user (fails on test, flashes on signup)

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "sinon": "~1.7.2",
     "mocha": "~1.10.0",
     "grunt-contrib-handlebars": "~0.5.9",
-    "grunt-contrib-watch": "~0.4.4"
+    "grunt-contrib-watch": "~0.4.4",
+    "mocha-as-promised": "~1.4.0"
   }
 }
