--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "underscore": "1.4.x",
     "showdown": "0.3.x",
     "sqlite3": "2.1.x",
-    "bookshelf": "0.1.x",
+    "bookshelf": ">=0.1.6",
     "knex": "0.1.x",
     "when": "2.1.x",
-    "bcrypt-nodejs": "0.0.3"
+    "bcrypt-nodejs": "0.0.3",
+    "node-uuid": "~1.4.0"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
