Freezing dependency versions
Updating package.json with full version numbers so that we can be certain
this version will continue to work in future

--- a/package.json
+++ b/package.json
@@ -7,24 +7,24 @@
     "test": "grunt validate --verbose"
   },
   "dependencies": {
-    "express": "3.1.x",
-    "express-hbs": "0.2.x",
-    "connect-flash": "0.1.x",
-    "node-polyglot": "0.2.x",
-    "css": "1.1.x",
-    "moment": "2.0.x",
-    "underscore": "1.4.x",
-    "showdown": "0.3.x",
-    "sqlite3": "2.1.x",
-    "bookshelf": ">=0.1.6",
-    "knex": "0.1.x",
-    "when": "2.1.x",
+    "express": "3.1.2",
+    "express-hbs": "0.2.0",
+    "connect-flash": "0.1.1",
+    "node-polyglot": "0.2.1",
+    "css": "1.1.0",
+    "moment": "2.0.0",
+    "underscore": "1.4.4",
+    "showdown": "0.3.1",
+    "sqlite3": "2.1.10",
+    "bookshelf": "0.1.9",
+    "knex": "0.1.7",
+    "when": "2.1.1",
     "bcrypt-nodejs": "0.0.3",
-    "node-uuid": "~1.4.0"
+    "node-uuid": "1.4.0"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
-    "grunt-jslint": ">=0.2.6",
+    "grunt-jslint": "~0.2.6",
     "should": "~1.2.2",
     "grunt-mocha-test": "~0.4.0",
     "grunt-shell": "~0.2.2",
@@ -33,7 +33,7 @@
     "mocha": "~1.10.0",
     "grunt-contrib-handlebars": "~0.5.9",
     "grunt-contrib-watch": "~0.4.4",
-    "grunt-bump": "0.0.2",
+    "grunt-bump": "~0.0.2",
     "grunt-contrib-copy": "~0.4.1",
     "grunt-contrib-compress": "~0.5.2",
     "mocha-as-promised": "~1.4.0"
