Import and Export UI
Added a basic UI and implementation for importing and exporting data.
Hooked up the routes and tested importing and exporting a version 001
file.

Slipped in the TemplateView in base.js but didn't end up using it.  I
think it will encapsulate common logic for template views pretty well.

Should close #175.

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,4 @@ projectFilesBackup
 /core/admin/assets/sass/modules/config.rb
 /core/admin/assets/sass/modules/bourbon
 /ghost/.idea/
+/core/shared/data/export/exported*
