--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "devDependencies": {
     "grunt": "~0.4.1",
-    "grunt-jslint": "~0.2.6",
+    "grunt-jslint": "git+https://github.com/ErisDS/grunt-jslint.git#custom",
     "should": "~1.2.2",
     "grunt-mocha-test": "~0.4.0",
     "grunt-shell": "~0.2.2",
