Switching sqlite3 module onto master so that it works with both stable (0.10.12) and latest (0.11.3) version of node

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "moment": "2.0.0",
     "underscore": "1.4.4",
     "showdown": "0.3.1",
-    "sqlite3": "2.1.10",
+    "sqlite3": "git+https://github.com/developmentseed/node-sqlite3.git#master",
     "bookshelf": "0.1.9",
     "knex": "0.1.7",
     "when": "2.1.1",
