--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.1",
   "private": true,
   "scripts": {
-    "start": "node app",
+    "start": "node index",
     "test": "grunt validate --verbose"
   },
   "dependencies": {
