--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "grunt": "~0.4.1",
     "grunt-jslint": "git+https://github.com/ErisDS/grunt-jslint.git#custom",
     "should": "~1.2.2",
-    "grunt-mocha-test": "~0.4.0",
     "grunt-shell": "~0.2.2",
     "grunt-contrib-sass": "~0.3.0",
     "sinon": "~1.7.2",
@@ -37,6 +36,7 @@
     "grunt-contrib-copy": "~0.4.1",
     "grunt-contrib-compress": "~0.5.2",
     "mocha-as-promised": "~1.4.0",
-    "grunt-groc": "~0.3.0"
+    "grunt-groc": "~0.3.0",
+    "grunt-mocha-cli": "~1.0.6"
   }
 }
