--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,6 @@
 pygments:     true
 permalink:    pretty
 port:         4478
+
+# If running locally, simply comment out the line below to make all urls relative
 url:          http://docs.tryghost.org
