--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
         "bcrypt-nodejs": "0.0.3",
         "node-uuid": "1.4.0",
         "colors": "0.6.1",
-        "semver": "2.1.0"
+        "semver": "2.1.0",
+        "fs-extra": "0.6.3"
     },
     "devDependencies": {
         "grunt": "~0.4.1",
