--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
         "node-uuid": "1.4.0",
         "colors": "0.6.1",
         "semver": "2.1.0",
-        "fs-extra": "0.6.3"
+        "fs-extra": "0.6.3",
+        "downsize": "0.0.2"
     },
     "devDependencies": {
         "grunt": "~0.4.1",
