--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "underscore": "1.5.1",
         "showdown": "0.3.1",
         "sqlite3": "2.1.14",
+        "mysql": "~2.0.0-alpha8",
         "bookshelf": "0.2.4",
         "knex": "0.1.8",
         "when": "2.2.1",
