Add LiveReload Grunt Dev Task
Adds the ability to run a new task via `grunt dev` that will watch our
sass, templates and javascript files for changes and reload them in the browser.

Also, refactored the Gruntfile to auto load all grunt-* tasks to remove
some code.

--- a/package.json
+++ b/package.json
@@ -41,6 +41,9 @@
         "grunt-contrib-compress": "~0.5.2",
         "grunt-groc": "~0.3.0",
         "grunt-mocha-cli": "~1.0.6",
+        "grunt-express-server": "~0.4.2",
+        "grunt-open": "~0.2.2",
+        "matchdep": "~0.1.2",
         "sinon": "~1.7.3",
         "should": "~1.2.2",
         "mocha": "~1.12.0"
