--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
         "fs-extra": "0.6.3",
         "downsize": "0.0.2",
         "validator": "1.4.0",
-        "rss": "0.2.0"
+        "rss": "0.2.0",
+        "nodemailer": "~0.5.2"
     },
     "devDependencies": {
         "grunt": "~0.4.1",
