Add setting for posts per page
closes #593
- added default setting of 6 posts per page
- added posts per page to settings page
- added limit to frontend.js (setting does not change API behavior)

--- a/core/server/data/default-settings.json
+++ b/core/server/data/default-settings.json
@@ -43,5 +43,11 @@
         "key":          "icon",
         "value":        "",
         "type":         "blog"
+    },
+    {
+        "key":          "postsPerPage",
+        "value":        "6",
+        "type":         "blog"
     }
+
 ]
