--- a/core/server/data/default-settings.json
+++ b/core/server/data/default-settings.json
@@ -43,5 +43,16 @@
         "key":          "icon",
         "value":        "",
         "type":         "blog"
+    },
+    {
+        "key":          "defaultLang",
+        "value":        "en",
+        "type":         "blog"
+    },
+    {
+        "key":          "forceI18n",
+        "value":        true,
+        "type":         "blog"
     }
+
 ]
