Clean up config (non-env based settings)
closes #625
- removed defaultLang, forceI18n and activePlugins from config
- added values to default-settings.json
- updated to use values from settings

--- a/core/server/data/default-settings.json
+++ b/core/server/data/default-settings.json
@@ -45,9 +45,18 @@
         "type":         "blog"
     },
     {
+        "key":          "defaultLang",
+        "value":        "en",
+        "type":         "blog"
+    },
+    {
+        "key":          "forceI18n",
+        "value":        true,
+        "type":         "blog"
+    },
+    {
         "key":          "postsPerPage",
         "value":        "6",
         "type":         "blog"
     }
-
 ]
