Use Mincer for asset pipeline
Add the mincer dependency and move most of the asset declarations into
their own initAsset method.  Have the initTheme method call the
initAsset method directly for now, could be separated later.

--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
         "downsize": "0.0.2",
         "validator": "1.4.0",
         "rss": "0.2.0",
-        "nodemailer": "~0.5.2"
+        "nodemailer": "~0.5.2",
+        "mincer": "~0.5.7"
     },
     "devDependencies": {
         "grunt": "~0.4.1",
