Changing icon setting to cover in defaults
issue #571

- forgot to do this

--- a/core/server/data/default-settings.json
+++ b/core/server/data/default-settings.json
@@ -40,7 +40,7 @@
         "type":         "blog"
     },
     {
-        "key":          "icon",
+        "key":          "cover",
         "value":        "",
         "type":         "blog"
     },
