Remove path from activeTheme
no issue
- obvious

--- a/core/server/data/default-settings.json
+++ b/core/server/data/default-settings.json
@@ -21,7 +21,7 @@
     },
     {
         "key":          "activeTheme",
-        "value":        "content/themes/casper",
+        "value":        "casper",
         "type":         "general"
     },
     {
