--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
         "grunt-bump": "~0.0.11",
         "grunt-contrib-copy": "~0.4.1",
         "grunt-contrib-compress": "~0.5.2",
+        "grunt-contrib-concat": "~0.3.0",
+        "grunt-contrib-uglify": "~0.2.4",
         "grunt-groc": "~0.3.0",
         "grunt-mocha-cli": "~1.0.6",
         "grunt-express-server": "~0.4.2",
