Add setting filter
closes #172
- added type to ghost.settings()
- added /api/settings?type=<filter>
- added availableThemes to settingsCache
- removed cachedSettingsRequestHandler
- removed /api/themes (including front end)
- changed activePlugins to type "plugin" in default-settings.json

--- a/core/server/data/default-settings.json
+++ b/core/server/data/default-settings.json
@@ -46,14 +46,14 @@
         }
     },
     "theme": {
-        "activePlugins": {
-            "defaultValue": ""
-        },
         "activeTheme": {
             "defaultValue": "casper"
         }
     },
     "plugin": {
+        "activePlugins": {
+            "defaultValue": "[]"
+        },
         "installedPlugins": {
             "defaultValue": "[]"
         }
