--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "grunt-contrib-handlebars": "~0.5.10",
         "grunt-contrib-watch": "~0.5.1",
         "grunt-bump": "~0.0.11",
+        "grunt-contrib-clean": "~0.5.0",
         "grunt-contrib-copy": "~0.4.1",
         "grunt-contrib-compress": "~0.5.2",
         "grunt-contrib-concat": "~0.3.0",
