Client & Server side validation for posts per page
closes #839

- caused a 500 error

--- a/core/server/data/default-settings.json
+++ b/core/server/data/default-settings.json
@@ -34,7 +34,8 @@
             "defaultValue": "6",
             "validations": {
                 "notNull": true,
-                "isNumeric": true
+                "isInt": true,
+                "max": 1000
             }
         },
         "forceI18n": {
