Undoing accidental commit of _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,5 @@ permalink:    pretty
 port:         4478
 
 # If running locally, simply comment out the line below to make all urls relative
-#url:          http://docs.ghost.org
+
+url:          http://docs.ghost.org
