--- a/_config.yml
+++ b/_config.yml
@@ -4,4 +4,4 @@ port:         4478
 
 # If running locally, simply comment out the line below to make all urls relative
 
-url:          http://docs.ghost.org
+#url:          http://docs.ghost.org
