--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
         "underscore": "1.5.1",
         "showdown": "0.3.1",
         "sqlite3": "2.1.16",
-        "bookshelf": "0.3.1",
-        "knex": "0.2.7-alpha",
+        "bookshelf": "0.5.7",
+        "knex": "0.4.11",
         "when": "2.2.1",
         "bcrypt-nodejs": "0.0.3",
         "node-uuid": "1.4.0",
