updating to bookshelf 0.5.2 & knex 0.4.4

--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "underscore": "1.5.2",
     "showdown": "0.3.1",
     "sqlite3": "2.1.17",
-    "bookshelf": "0.3.1",
-    "knex": "0.2.7-alpha",
+    "bookshelf": "0.5.2",
+    "knex": "0.4.4",
     "when": "2.4.0",
     "bcrypt-nodejs": "0.0.3",
     "node-uuid": "1.4.1",
