--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "node-uuid": "1.4.0",
         "colors": "0.6.1",
         "semver": "2.1.0",
+        "semver-utils": "1.1.0",
         "fs-extra": "0.6.3",
         "downsize": "0.0.2",
         "validator": "1.4.0",
