Refactored multilingual support
No-longer posts and English is now on base URL.

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 pygments:     true
-permalink:    /:categories/:title
+permalinks: pretty
 relative_permalinks: false
 languages:
     - name: 'English'
