--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description" : "Just a blogging platform.",
     "author"      : "Ghost Foundation",
     "homepage"    : "http://ghost.org",
+    "bin": "bin/ghost",
     "keywords"    : [
         "ghost",
         "blog",
@@ -29,6 +30,7 @@
     },
     "engineStrict": true,
     "dependencies": {
+        "grunt": "~0.4.1",
         "express": "3.4.2",
         "express-hbs": "0.5.0",
         "connect-slashes": "0.0.10",
@@ -48,13 +50,15 @@
         "downsize": "0.0.2",
         "validator": "1.4.0",
         "rss": "0.2.0",
-        "nodemailer": "0.5.2"
+        "nodemailer": "0.5.2",
+        "commander": "2.0.0",
+        "inquirer": "0.3.4",
+        "progress": "1.1.0"
     },
     "optionalDependencies": {
         "mysql": "2.0.0-alpha9"
     },
     "devDependencies": {
-        "grunt": "~0.4.1",
         "grunt-jslint": "~1.0.0",
         "grunt-shell": "~0.3.1",
         "grunt-contrib-sass": "~0.4.1",
