--- a/package.json
+++ b/package.json
@@ -1,7 +1,19 @@
 {
     "name": "ghost",
+    "description": "Ghost is a free, open, simple blogging platform that's available to anyone who wants to use it.",
     "version": "0.3.2",
     "private": true,
+    "bugs": "https://github.com/TryGhost/Ghost/issues",
+    "license": "https://raw.github.com/TryGhost/Ghost/master/LICENSE.txt",
+    "repository": {
+        "type": "git",
+        "url": "git@github.com:TryGhost/Ghost.git"
+    },
+    "homepage": "http://ghost.org",
+    "author": "John O'Nolan (http://john.onolan.org)",
+    "contributors": [
+        "Hannah Wolfe (http://erisds.co.uk)"
+    ],
     "scripts": {
         "start": "node index",
         "test": "grunt validate --verbose"
