--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
         "grunt": "~0.4.1",
         "grunt-jslint": "~1.0.0",
         "grunt-shell": "~0.3.1",
-        "grunt-contrib-sass": "~0.4.1",
+        "grunt-sass": "~0.7.0",
         "grunt-contrib-handlebars": "~0.5.10",
         "grunt-contrib-watch": "~0.5.1",
         "grunt-bump": "~0.0.11",
