Load plugins from config.
* Use config.activePlugins to load plugins
* Update example config to have activePlugins
* Add example plugin
* Include some barebones plugin documentation

--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,7 @@ projectFilesBackup
 /_site
 /content/data/*
 /content/plugins/**/*
+!/content/plugins/example.js
 /content/themes/**/*
 /content/images/**/*
 !/content/themes/casper/**
