refactoring image storage and implementing S3 storage
part of #635
- in order to crystallise whether local storage module was correct it was easiest to implement S3 module
- config is currently only in development section
- implemented as a config option rather than a plugin, as discussed
- may want to restructure config depending on what other storage comes along
- the S3 bucket must have read permissions as the link is direct to the bucket
- used aws-sdk for S3 interaction because:
	- it is by Amazon
	- it is active
	- it has all AWS services
	- it has built in retries
	- I have used it since early versions with no issues

--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
         "downsize": "0.0.2",
         "validator": "1.4.0",
         "rss": "0.2.0",
-        "nodemailer": "~0.5.2"
+        "nodemailer": "~0.5.2",
+        "aws-sdk": "1.9.0"
     },
     "devDependencies": {
         "grunt": "~0.4.1",
