--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "licenses"    : [
         {
             "type": "MIT",
-            "url": "https://raw.github.com/TryGhost/Ghost/master/LICENSE.txt"
+            "url": "https://raw.github.com/TryGhost/Ghost/master/LICENSE"
         }
     ],
     "scripts": {
