--- a/package.json
+++ b/package.json
@@ -4,8 +4,15 @@
     "description" : "Just a blogging platform.",
     "author"      : "Ghost Foundation",
     "homepage"    : "http://ghost.org",
-    "keywords"    : ["ghost", "blog", "cms"],
-    "repository"  : {"type": "git", "url": "git://github.com/TryGhost/Ghost.git"},
+    "keywords"    : [
+        "ghost",
+        "blog",
+        "cms"
+    ],
+    "repository"  : {
+        "type": "git",
+        "url": "git://github.com/TryGhost/Ghost.git"
+    },
     "private"     : true,
     "licenses"    : [
         {
