Convert English docs to markdown
- Issue #1180: All English docs are written in markdown now.
  HTML is only used when it is required for theming or for elements that have no markdown counterpart.

- Fix a bug where pagination is not shown
  The pagination used the "||" operator that does not exist in Liquid, "or" does.

- Markdown parser set to Redcarpet
  The default Markdown parser Maruku is not able to build the documentation and throws an error.

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 pygments:     true
 permalinks: pretty
 relative_permalinks: false
+markdown: redcarpet
 languages:
     - name: 'English'
       key: 'en'
