Started German translation

--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,11 @@ languages:
       key: 'zh'
     - name: '한국의'
       key: 'ko'
+    - name: 'Deutsch'
+      key: 'de'
     - name: 'Français'
       key: 'fr'
+
 port:         4478
 
 translations:
@@ -30,6 +33,13 @@ translations:
     themes:       'Themes'
     translations: 'Translations'
     help:         'Help'
+  de:
+    site_title:   'Ghost-Handbuch'
+    installation: 'Installation'
+    usage:        'Anwendung'
+    email:        'E-Mail'
+    themes:       'Themen'
+    help:         'Hilfe'
   fr:
     site_title:   'Guide Ghost'
     installation: 'Installation'
