Correct Chinese language code, cross-link language versions
As discussed in #1233 and #1344
- added {{page.section}} metadata so as to be able to reference URI components (site_url, page.lang, page.chapter, page.section) individually
- refactored canonical meta tag in default layout to refer to the same page with trailing slash: site_url/[page.lang/][page.chapter/][page.section/]
- added alternate-hreflang meta tags in default layout to help search engines understand about different language versions
- added visible cross-language links in top navbar with .navbar-right styling for each page, using the URI components mentioned above to construct the different language links (essentially but not quite the same logic as for alternate-hreflang meta tags)
- included Bootstrap v3's .navbar-right styles in main.css, seeing as they seem to be missing from bootstrap.css at the moment and I don't want to mess with it. :D

It may be appropriate to edit README.md or add a CONTRIBUTING or TRANSLATING file to explain how to get started with new translations, and/or move translations to a more formal mechanism...

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ languages:
     - name: 'Español'
       key: 'es'
     - name: '中文'
-      key: 'cn'
+      key: 'zh'
 port:         4478
 
 translations:
@@ -19,7 +19,7 @@ translations:
     email:        'Email'
     themes:       'temas'
     help:         'ayudar'
-  cn:
+  zh:
     site_title:   'Ghost使用指南'
     installation: '安装'
     usage:        '使用'
