Initial auto update implementation
Fixes #1260

- Added update button to ugly debug UI.
- Button check for updates by parsing the location header on the
ghost-latest.zip redirect.
- If an update is available, a modal confirmation window is presented to
confirm the installation of the update.
- Installation process includes creating the `content/tmp/` folder
(unless it already exists), downloading the zip to that folder,
extracting the zip on top of the current installation and then deleting
the zip from `tmp`.
- Note the update process still requires you to manually run `npm
install` and `npm update` and restart the server. See the comments in
the associated item for more information to that end.

--- a/package.json
+++ b/package.json
@@ -48,7 +48,9 @@
         "downsize": "0.0.2",
         "validator": "1.4.0",
         "rss": "0.2.0",
-        "nodemailer": "0.5.2"
+        "nodemailer": "0.5.2",
+        "request": "2.27.0",
+        "adm-zip": "0.4.3"
     },
     "optionalDependencies": {
         "mysql": "2.0.0-alpha9"
