Functional tests for home and post page
closes #1373

- Note that the tests fail if you run them pre #1363, thus future proofing us from this happening again.
- Added submodule handling to travis
- Added a new test for each of the home and post pages

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,8 @@ node_js:
 env:
   - DB=sqlite3
   - DB=mysql
-git:
-  submodules: false
 before_install:
+  - git submodule update --init
   - gem update --system
   - gem install sass bourbon
   - npm install -g grunt-cli
