--- a/package.json
+++ b/package.json
@@ -29,50 +29,50 @@
     },
     "engineStrict": true,
     "dependencies": {
+        "bcryptjs": "0.7.10",
+        "bookshelf": "0.5.7",
+        "colors": "0.6.1",
+        "connect-slashes": "0.0.10",
+        "downsize": "0.0.2",
         "express": "3.4.2",
         "express-hbs": "0.5.1",
-        "connect-slashes": "0.0.10",
-        "node-polyglot": "0.2.1",
+        "fs-extra": "0.6.3",
+        "knex": "0.4.11",
         "moment": "2.1.0",
-        "underscore": "1.5.1",
+        "node-polyglot": "0.2.1",
+        "node-uuid": "1.4.0",
+        "nodemailer": "0.5.2",
+        "rss": "0.2.0",
+        "semver": "2.1.0",
         "showdown": "0.3.1",
         "sqlite3": "2.1.19",
-        "bookshelf": "0.5.7",
-        "knex": "0.4.11",
-        "when": "2.2.1",
-        "bcryptjs": "0.7.10",
-        "node-uuid": "1.4.0",
-        "colors": "0.6.1",
-        "semver": "2.1.0",
-        "fs-extra": "0.6.3",
-        "downsize": "0.0.2",
+        "underscore": "1.5.1",
         "validator": "1.4.0",
-        "rss": "0.2.0",
-        "nodemailer": "0.5.2"
+        "when": "2.2.1"
     },
     "optionalDependencies": {
         "mysql": "2.0.0-alpha9"
     },
     "devDependencies": {
         "grunt": "~0.4.1",
-        "grunt-jslint": "~1.0.0",
-        "grunt-shell": "~0.3.1",
-        "grunt-contrib-sass": "~0.4.1",
-        "grunt-contrib-handlebars": "~0.5.10",
-        "grunt-contrib-watch": "~0.5.3",
         "grunt-bump": "~0.0.11",
         "grunt-contrib-clean": "~0.5.0",
-        "grunt-contrib-copy": "~0.4.1",
         "grunt-contrib-compress": "~0.5.2",
         "grunt-contrib-concat": "~0.3.0",
+        "grunt-contrib-copy": "~0.4.1",
+        "grunt-contrib-handlebars": "~0.5.10",
+        "grunt-contrib-sass": "~0.4.1",
         "grunt-contrib-uglify": "~0.2.4",
-        "grunt-groc": "~0.3.0",
-        "grunt-mocha-cli": "~1.0.6",
+        "grunt-contrib-watch": "~0.5.3",
         "grunt-express-server": "~0.4.2",
+        "grunt-groc": "~0.3.0",
+        "grunt-jslint": "~1.0.0",
+        "grunt-mocha-cli": "~1.0.6",
         "grunt-open": "~0.2.2",
+        "grunt-shell": "~0.3.1",
         "matchdep": "~0.1.2",
-        "sinon": "~1.7.3",
+        "mocha": "~1.12.0",
         "should": "~2.0.2",
-        "mocha": "~1.12.0"
+        "sinon": "~1.7.3"
     }
 }
