--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
         "grunt-jslint": "~1.1.1",
         "grunt-mocha-cli": "~1.3.0",
         "grunt-shell": "~0.5.0",
+        "grunt-update-submodules": "~0.2.0",
         "matchdep": "~0.3.0",
         "mocha": "~1.13.0",
         "should": "~2.0.2",
