--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
         "mysql": "2.0.0-alpha9"
     },
     "devDependencies": {
+        "blanket": "~1.1.5",
         "grunt": "~0.4.1",
         "grunt-bump": "~0.0.11",
         "grunt-contrib-clean": "~0.5.0",
@@ -74,6 +75,7 @@
         "matchdep": "~0.3.0",
         "mocha": "~1.13.0",
         "request": "~2.27.0",
+        "require-dir": "~0.1.0",
         "should": "~2.0.2",
         "sinon": "~1.7.3"
     }
