--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
         "matchdep": "~0.3.0",
         "mocha": "~1.13.0",
         "should": "~2.0.2",
-        "sinon": "~1.7.3"
+        "sinon": "~1.7.3",
+        "request": "~2.27.0"
     }
 }
