--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "showdown": "0.3.1",
         "sqlite3": "2.1.19",
         "underscore": "1.5.2",
+        "unidecode": "0.1.3",
         "validator": "1.4.0",
         "when": "2.5.1"
     },
