--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
         "underscore": "1.5.2",
         "unidecode": "0.1.3",
         "validator": "1.4.0",
-        "when": "2.5.1"
+        "when": "2.5.1",
+        "xml": "~0.0.4"
     },
     "optionalDependencies": {
         "mysql": "2.0.0-alpha9"
