--- a/_config.yml
+++ b/_config.yml
@@ -14,9 +14,9 @@ translations:
     site_title:   'Ghost使用指南'
     installation: '安装'
     usage:        '使用'
-    email:        '邮件设置'
+    email:        '邮件'
     themes:       '主题'
-    translations: 'translations'
+    translations: '翻译'
     help:         '帮助'
 
 # If running locally, simply comment out the line below to make all urls relative
