--- a/_config.yml
+++ b/_config.yml
@@ -40,6 +40,9 @@ translations:
     email:        'E-Mail'
     themes:       'Themen'
     help:         'Hilfe'
+    deploy:       'Einsetzen'
+    upgrading:    'Aktualisieren' 
+    troubleshooting: 'Problembehebung'
   fr:
     site_title:   'Guide Ghost'
     installation: 'Installation'
