--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
         "type": "git",
         "url": "git://github.com/TryGhost/Ghost.git"
     },
+    "bugs"        : "https://github.com/TryGhost/Ghost/issues",
+    "contributors": "https://github.com/TryGhost/Ghost/graphs/contributors",
     "private"     : true,
     "licenses"    : [
         {
