Make it possible to require ghost as a module. fixes #1326

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
             "url": "https://raw.github.com/TryGhost/Ghost/master/LICENSE"
         }
     ],
+    "main": "./core/server",
     "scripts": {
         "start": "node index",
         "test": "grunt validate --verbose"
