Add postgres build and allow it to fail.
refs #1333

--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
         "when": "2.5.1"
     },
     "optionalDependencies": {
-        "mysql": "2.0.0-alpha9"
+        "mysql": "2.0.0-alpha9",
+        "pg": "~2.6.2"
     },
     "devDependencies": {
         "blanket": "~1.1.5",
