Restore support for using ghost as a npm module fixes #1326

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
             "url": "https://raw.github.com/TryGhost/Ghost/master/LICENSE"
         }
     ],
-    "main": "./core/server",
+    "main": "./core/index",
     "scripts": {
         "start": "node index",
         "test": "grunt validate --verbose"
